<resources>
    <string name="app_name">CryptoCurrency Exchange</string>

    <string name="error_message">
        An error has occurred. Please check your internet and try again by swipe down and REFRESH
    </string>
    <string name="action_search">Search</string>
    <string name="total_supply">Total supply</string>
    <string name="volume_for_24h">Volume for 24h</string>
    <string name="capitalization">Capitalization</string>
    <string name="rank">Rank</string>
    <string name="information">Information</string>
    <string name="ok">OK</string>
    <string name="all">ALL</string>
    <string name="_1y">1Y</string>
    <string name="_3m">3M</string>
    <string name="_1m">1M</string>
    <string name="_7d">7D</string>
    <string name="_1d">1D</string>

</resources>
